Petit test bench du personnage qui en attaque un autre

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ bin/AudioRampage
 bin/AudioRampage.exe
 build/source/*.o
 src/modele/test/testModele
+src/modele/test/testModele.exe
 src/modele/test/*.o
